fixed pie chart dimension,  file table overflow

--- a/template.css
+++ b/template.css
@@ -60,6 +60,7 @@ section{
     padding: 20px;
     margin: 20px;
     border-radius: 5px;
+    overflow-y: scroll;
 }
 
 main{ display: flex;
@@ -86,6 +87,13 @@ th,tr,td{
     padding: 5px;
 }
 
+#pie_chart{
+    width:90%;
+    height:auto;
+    max-width: 400px;
+
+}
+
 footer{
     margin: 0;
     padding: 0;
@@ -96,6 +104,8 @@ footer{
     justify-content: space-between;
     align-items: center;
 }
+
+
 
 /*media query desktop*/
 @media (min-width: 900px) {
